# colcon-poetry-ros

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: release.yaml
colcon_poetry_ros/: config.py  package.py  project.py
colcon_poetry_ros/dependencies/: __main__.py  install.py
colcon_poetry_ros/package_augmentation/: poetry.py
colcon_poetry_ros/package_identification/: poetry.py
colcon_poetry_ros/task/poetry/: build.py  test.py
colcon_python_poetry/package_augmentation/: poetry.py  python_poetry.py
colcon_python_poetry/package_identification/: poetry.py
colcon_python_poetry/task/poetry/: build.py
example/: Dockerfile  README.md
example/src/my_package/: package.xml  pyproject.toml
example/src/my_package/my_package/: node.py
