[metadata]
name = colcon-python-poetry
version = attr: colcon_python_poetry.__version__
url = https://github.com/urban-machine/colcon-python-poetry
author = Urban Machine
author_email = info@urbanmachine.build
maintainer = Urban Machine
maintainer_email = info@urbanmachine.build
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Proprietary
description = A Colcon extension providing support for Python projects that use Poetry
long_description = file: README.rst
keywords = colcon

[options]
packages = find:
install_requires =
    colcon-core~=0.6
    toml~=0.10
    setuptools
tests_require =
    pytest
zip_safe = true

[options.entry_points]
colcon_core.package_augmentation =
    poetry = colcon_python_poetry.package_augmentation.poetry:PoetryPackageAugmentation
colcon_core.package_identification =
    poetry = colcon_python_poetry.package_identification.poetry:PoetryPackageIdentification
colcon_core.task.build =
    poetry = colcon_python_poetry.task.poetry.build:PoetryBuildTask
