[metadata]
name = colcon-poetry-ros
version = attr: colcon_poetry_ros.__version__
url = https://github.com/urban-machine/colcon-poetry-ros
author = Urban Machine
author_email = info@urbanmachine.build
maintainer = Urban Machine
maintainer_email = info@urbanmachine.build
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
license = BSD-3-Clause
license_files = LICENSE
description = A Colcon extension providing support for Python projects that use Poetry
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
packages = find:
install_requires =
    colcon-core~=0.6
    toml~=0.10
    setuptools
zip_safe = true

[options.entry_points]
colcon_core.package_augmentation =
    poetry = colcon_poetry_ros.package_augmentation.poetry:PoetryPackageAugmentation
colcon_core.package_identification =
    poetry = colcon_poetry_ros.package_identification.poetry:PoetryPackageIdentification
colcon_core.task.build =
    poetry.python = colcon_poetry_ros.task.poetry.build:PoetryBuildTask
colcon_core.task.test =
    poetry.python = colcon_poetry_ros.task.poetry.test:PoetryTestTask
console_scripts =
    install-poetry-ros-dependencies = colcon_poetry_ros.dependencies.__main__:main
